--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,44 @@
-[{"id": "e6457a72-0fd7-411f-83d9-023a28a27b90", "description": "Python project", "deadline": "2024-12-11", "priority": "High", "completed": false}, {"id": "95b451a7-1e6e-4338-99a0-bc998b9825aa", "description": "data communication assignmnt", "deadline": "2024-12-15", "priority": "medium", "completed": false}, {"id": "79aaaa36-a40a-42b1-a3b8-3991586f10aa", "description": "Eng pronunciation HW", "deadline": "2024-12-16", "priority": "Medium", "completed": false}, {"id": "52644630-ada1-4a36-8d54-da02dbdd9dbb", "description": "Music video making", "deadline": "2024-12-15,Sunday", "priority": "High", "completed": false}, {"id": "d440b8c1-908c-4009-b2df-f9868c8f02ec", "description": "Phy lab assignments>>RC circuit", "deadline": "2024-12-10", "priority": "low", "completed": true}]
+[
+    {
+        "id": "08da9b99-45e7-47bd-a784-945fc6f3af92",
+        "description": "Python project",
+        "deadline": "2024-12-11",
+        "priority": "High",
+        "completed": false
+    },
+    {
+        "id": "077cb5c5-c458-473a-9776-ba7f5b3d1f3c",
+        "description": "data communication assignmnt",
+        "deadline": "2024-12-15",
+        "priority": "medium",
+        "completed": false
+    },
+    {
+        "id": "ac8b3689-4025-4698-bb2b-c8374042d04f",
+        "description": "Eng pronunciation HW",
+        "deadline": "2024-12-16",
+        "priority": "Medium",
+        "completed": false
+    },
+    {
+        "id": "b8bd488e-f92f-40fd-9b95-a93c6a362acd",
+        "description": "Music video making",
+        "deadline": "2024-12-15",
+        "priority": "High",
+        "completed": false
+    },
+    {
+        "id": "f3dfbed4-eb8b-4435-aa8a-de53ffd77d93",
+        "description": "Phy lab assignments>>RC circuit",
+        "deadline": "2024-12-10",
+        "priority": "low",
+        "completed": true
+    },
+    {
+        "id": "a2edf2c0-2919-422a-8142-43c7ab12540c",
+        "description": "Group study in library",
+        "deadline": null,
+        "priority": "Medium",
+        "completed": false
+    }
+]
